--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Panda Commerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+    <!-- customized css  -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -45,7 +48,7 @@
         <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active bg-info border rounded p-5">
+                    <div class="carousel-item active panda-bg-info border rounded p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -53,7 +56,7 @@
                                     <p>This is the best headphone in the world for people who just want to waste time in
                                         front of funky world.</p>
                                     <h1>420$</h1>
-                                    <div class="btn btn-warning">Buy Now </div>
+                                    <div class="btn panda-btn-warning">Buy Now </div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -61,7 +64,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active bg-info border rounded p-5">
+                    <div class="carousel-item active panda-bg-info border rounded p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -69,7 +72,7 @@
                                     <p>This is the best headphone in the world for people who just want to waste time in
                                         front of funky world.</p>
                                     <h1>420$</h1>
-                                    <div class="btn btn-warning">Buy Now </div>
+                                    <div class="btn panda-btn-warning">Buy Now </div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -77,7 +80,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active bg-info border rounded p-5">
+                    <div class="carousel-item active panda-bg-info border rounded p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -85,7 +88,7 @@
                                     <p>This is the best headphone in the world for people who just want to waste time in
                                         front of funky world.</p>
                                     <h1>420$</h1>
-                                    <div class="btn btn-warning">Buy Now </div>
+                                    <div class="btn panda-btn-warning">Buy Now </div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -112,7 +115,7 @@
         <!-- catagories start  -->
         <section class="container my-5">
             <div class="container overflow-hidden text-center">
-                <div class="row gy-5">
+                <div class="row gy-5 catagories">
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="p-3 border bg-warning rounded-3 d-flex align-items-center justify-content-around ">
                             <h1 class="text-white">Watch</h1>
@@ -150,7 +153,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -163,7 +166,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -177,7 +180,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -199,7 +202,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -213,7 +216,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -227,7 +230,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -237,7 +240,7 @@
 
         <!-- subscribe start  -->
         <section style="height: 300px;"
-            class="container bg-info rounded-3 d-flex justify-content-center align-items-center">
+            class="container panda-bg-info rounded-3 d-flex justify-content-center align-items-center">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
                 <p>Get updates on sales, specials and more</p>
@@ -245,7 +248,7 @@
                     <div class="mb-1">
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
-                    <button type="submit" class="btn btn-warning">Submit</button>
+                    <button type="submit" class="btn panda-btn-warning">Submit</button>
                 </form>
             </div>
         </section>
